Further fixes to typeahead, override default limit and add scrollbar

--- a/app/assets/stylesheets/custom_typeahead_suggestion.css
+++ b/app/assets/stylesheets/custom_typeahead_suggestion.css
@@ -36,6 +36,8 @@
 }
 
 .tt-menu {
+  max-height: 150px;
+  overflow-y: auto;
   width: 422px;
   margin-top: 12px;
   padding: 8px 0;
